fixed groups container glitch on Firefox

--- a/client/src/components/features/Groups/GroupsContainer/GroupsContainer.module.css
+++ b/client/src/components/features/Groups/GroupsContainer/GroupsContainer.module.css
@@ -13,7 +13,7 @@
   position: relative;
   background-color: var(--color-body);
   width: 100%;
-  height: 94%;
+  height: 93%;
 }
 
 .cta {
@@ -25,7 +25,7 @@
 
 .groupBar {
   border-top: 0.25rem solid var(--color-structure-elements);
-  margin-left: 0.5rem;
+  margin: 0rem 0.5rem;
   display: flex;
   flex-direction: row;
   align-items: center;
